# double-blind-review

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: double-blind-review.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  aggregation.py  anonymization.py  assignment.py  audit.py  calibration.py  models.py  reliability.py  rubric.py
src/viz/: __init__.py  app.py
tests/: test_aggregation.py  test_anonymization.py  test_assignment.py  test_calibration.py  test_reliability.py
